configs/argocd/argocd-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argo-cd
  annotations:
    link.argocd.argoproj.io/external-link: https://argocd.kube.truebad0ur.space
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  hostnames:
    - "argocd.kube.truebad0ur.space"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
